fixed netlify config

--- a/REST-API-DEPLOY/package.json
+++ b/REST-API-DEPLOY/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node functions/index.js",
-    "build": "netlify deploy --prod"
+    "start": "node functions/index.js"
   },
   "keywords": [],
   "author": "",
