--- a/REST-API-DEPLOY/netlify.toml
+++ b/REST-API-DEPLOY/netlify.toml
@@ -1,8 +1,9 @@
 [functions]
+    directory = "functions"
     external_node_modules = ["express"]
     node_bundler = "esbuild"
 [[redirects]]
     force = true
     from = "/*"
+    to = "/.netlify/functions/index/:splat"
     status = 200
-    to = "/.netlify/functions/:splat"
